# chat

./: .env  Cargo.toml  commandline.txt  private.pem  test.rest
chat_core/: Cargo.toml
chat_core/fixtures/: 384private.pem  384public.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs  mod.rs
chat_server/: Cargo.toml  app.yml  chat.yml  test.rest
chat_server/fixtures/: public.pem
chat_server/sql/: init.sql  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yml
migrations/: 20241219011512_workspace.sql  20241221072159_trigger.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  sse.rs
