[workspace]
members = ["chat_core", "chat_server", "notify_server"]

resolver = "2"


[workspace.dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
    "tracing",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
jwt-simple = "0.12"

serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "fs",
    "trace",
] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
